# encrypt-storage

./: .gitignore  README.md  pyproject.toml
encrypt_storage/: __init__.py
encrypt_storage/asyncio/: __init__.py  aws_s3.py  yandex.py
encrypt_storage/encryptor/: abstract.py  encryptor.py
encrypt_storage/slicer/: encrypt.py
encrypt_storage/storages/: abstract.py  aws_s3.py  yandex.py
encrypt_storages/: __init__.py
encrypt_storages/asyncio/: yandex.py
storages/: __init__.py  types.py  yandex.py
storages/asyncio/: yandex.py
storages/slicer/: encrypt.py
